@@ -1,3 +1,8 @@
+02.feb (og) 
+	Exportly.cpp: If \voiceOne etc. is used in pianostaff,
+	articulation signs are either placed on only above or only below
+	staff, and not in any reasonable connection with the notehead. So
+	\voiceOne etc. is no longer used in pianostaff.
 1.feb (lv)
       - export MusicXML <print new-system> also in converter mode
 31.jan (ws)
